# multi-agent-collab

./: .gitignore  AIRCRAFT_SIMULATOR_INTEGRATION.md  AIRCRAFT_SIM_FIX_SUMMARY.md  AVIATION_MCP_COMPLETE.md  AVIATION_MCP_SETUP.md  BEFORE_AFTER_EXAMPLE.md  CHECKPOINT.md  CHECKPOINT_POLISH.md  CLASSIFIED_AIRDROP_MISSION_SUMMARY.md  CODE_EVALUATION.md  DEMO_ANALYSIS_SUMMARY.md  DEMO_GUIDE.md  DEMO_IMPROVEMENTS.md  EXTERNAL_PROMPTS_GUIDE.md  HOW_TO_RUN_DEMOS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MCP_QUICK_START.md  MCP_SERVERS_SETUP.md  MCP_SETUP_COMPLETE.md  MCP_VERIFICATION_RESULTS.md  MISSION_SNAPSHOTS_GUIDE.md  MODEL_UPDATE_NOTE.md  NEXT_STEPS.md  PHASE2_COMPLETE.md  POLISH_PROGRESS.md  POLISH_ROADMAP.md  POLISH_STATUS.md  QUICKSTART.md  QUICK_START_AUTONOMOUS_TOOLS.md  QUICK_START_EXTERNAL_PROMPTS.md  QUICK_START_SNAPSHOTS.md  README.md  REFACTORING_STATUS.md  RESTART_HERE.md  SUMMARY_EXTERNAL_PROMPTS.md  WEEK1_COMPLETE.md  WEEK2_COMPLETE.md  demo.py  demo_aerospace.py  (+24 more)
.github/: copilot-instructions.md
Documents/: Integrated Enhancement Proposal_ Multi-Agent Aviation Demo.md
configs/: HC-144-Airdrop.yaml  HC-144.yaml  LargeAircraft-v2.yaml  LargeAircraft.yaml  U-28-with-prompts.yaml  U-28.yaml  aerospace.yaml  airdrop_mission.yaml  default.yaml  demo.yaml  mission_order_template.yaml  mission_snapshots.yaml  quick mission order.yaml  surveillance_mission.yaml
docs/: ARCHITECTURE.md  MCP_INTEGRATION.md  USAGE.md
examples/: snapshot_demo.py
src/: exceptions.py
tests/: __init__.py  test_base_agent.py  test_circuit_breaker.py  test_message.py  (+8 more)
(+32 files in other folders)
